load env variables

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
     "require": {
         "php": "^8.2",
         "symfony/framework-bundle": "^7.1",
-        "symfony/yaml": "^7.1"
+        "symfony/yaml": "^7.1",
+        "symfony/dotenv": "^7.1"
     },
     "autoload": {
         "psr-4": {
